# multimodal-paper-rag

./: .env.example  .gitignore  Makefile  README.md  app.py  pyproject.toml  requirements.txt
notebooks/: 01_explore_pdfs.ipynb  02_chunking_comparison.ipynb  03_eval_results.ipynb
src/embeddings/: image_embedder.py  text_embedder.py
src/evaluation/: ragas_eval.py  test_dataset.py
src/generation/: llm_client.py
src/ingestion/: chunker.py  parser.py  pipeline.py
src/retrieval/: __init__.py  hybrid_search.py  reranker.py  vector_store.py
src/ui/: app.py
tests/: test_chunker.py  test_evaluation.py  test_generation.py  test_parser.py  test_retrieval.py
